--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,7 +31,7 @@
     <div class="profile">
       <div class="row">
         <div class="col-md-2 col-md-offset-5 col-xs-4 col-xs-offset-4 circular" 
-          ani-scroll="550"
+          ani-scroll="500"
           data-ng-class="{toggled:profileImageToggled}"
           ng-mouseover="profileImageToggled=true">
           <div class="overlay">
@@ -40,7 +40,7 @@
           <img src="/images/me-2.jpg" class=""/>
         </div>
       </div>
-      <div class="row profile-body" ani-scroll="620">
+      <div class="row profile-body" ani-scroll="550">
         <div class="col-md-8 col-md-offset-2">
           <p>Gregory Collett - born and raised in S.E London, England.</p> 
           <p>
@@ -153,8 +153,8 @@
   <div class="container">
     <header class="section-header">
       <div class="title">
-        <p class="bottom"><span>Feel free to fire me a message</span></p>
-        <h2 class="section-title"><span>Contact Me</span></h2>
+        <p class="bottom"><span>Fire me a message</span></p>
+        <h2 class="section-title"><span>Contact</span></h2>
       </div>
     </header>
     <div class="row contact">
