--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,9 +6,9 @@
       <div class="title">
         <p class="top"><span>Back-end & Front-end Web Developer</span></p>
         <h2 class="section-title"><span>Gregory Collett</span></h2>
-        <p class="bottom secret">
+        <!-- <p class="bottom secret">
           <span>Unfortunately, not a designer :D</span>
-        </p>
+        </p> -->
       </div>
     </header>
     <div class="touch-scroller" data-ng-click="goToPage('page-profile')">
@@ -49,10 +49,120 @@
           <p>Fell in <i class="glyphicon glyphicon-heart"></i> with tech as a child and it has continued to grow. It all started with my family's electronics & a screwdriver, any electronic item I could get my hands on was dissected. 
           </p>
           <p>
-          I then progressed to software, all it took to get me hooked was a £3 magazine with a demo disc containing a 30 day trial of Dreamweaver MX and Flash MX (the macromedia days)... I never looked back!
+          I then progressed to software, all it took to get me hooked was a £3 magazine with a demo disc containing a 30 day trial of Dreamweaver MX and Flash MX (the Macromedia days)... I never looked back!
           </p>
-          
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="page page-education" id="page-education">
+  <div class="container">
+    <header class="section-header">
+      <div class="title">
+        <h2 class="section-title"><span>Education</span></h2>
+      </div>
+    </header>
+  </div>
+  <div class="education">
+    <div class="row" style="padding-top:35px;margin-left:0;margin-right:0;">
+      <div class="col-md-6 col-md-offset-3">
+        <h2 class="text-center">WOOLWICH POLYTECHNIC</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="col-md-8">COURSE</th>
+              <th class="col-md-4">LEVEL</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>INFORMATION TECHNOLOGY</td>
+              <td>A</td>
+            </tr>
+            <tr>
+              <td>ENGLISH</td>
+              <td>B</td>
+            </tr>
+            <tr>
+              <td>MATHS</td>
+              <td>BB</td>
+            </tr>
+            <tr>
+              <td>MUSIC</td>
+              <td>BB</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2 class="text-center">ZENOS IT ACADEMY</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="col-md-8">COURSE</th>
+              <th class="col-md-4">LEVEL</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>COMPTIA A+</td>
+              <td>PASS</td>
+            </tr>
+            <tr>
+              <td>COMPTIA N+</td>
+              <td>PASS</td>
+            </tr>
+            <tr>
+              <td>MCDST</td>
+              <td>PASS</td>
+            </tr>
+          </tbody>
+        </table>
+        <p class="text-center">In 2008 whilst applying for universities I was offered my ideal job as a juniour developer at a software house that maintained & managed a number of projects/products. I decided to take the offer and go straight into the commercial industry.</p>
+        <h2 class="text-center">UNOFFICIAL TRAINING</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="col-md-8">COURSE</th>
+              <th class="col-md-4">LEVEL</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>CODEACADEMY</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>SAFARI BOOKS</td>
+              <td>A great source for tech books</td>
+            </tr>
+            <tr>
+              <td>LYNDA</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>MIKAMAI TRAINING</td>
+              <td>Thanks Todd!</td>
+            </tr>
+            <tr>
+              <td>PROCESSMAKER PARTNER TRAINING</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>SUGARCRM PARTNER TRAINING</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>CARTOON SMART</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>I also attend a lot of conferences, meetups & hack days</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+        <h2 class="text-center">FUTURE</h2>
+        <p class="text-center">You have some training for me? Brilliant lets get started!</p>
       </div>
     </div>
   </div>
@@ -70,6 +180,7 @@
     <header class="section-header">
       <div class="title">
         <p class="top"><span>My latest</span></p>
+        <p class="bottom"><span><i>& Experiments</i></span></p>
         <h2 class="section-title"><span>Projects</span></h2>
       </div>
       <!-- <div class="spacer"></div> -->
@@ -93,18 +204,12 @@
             <div class="project-body" data-ng-class="{toggled:project.toggled}">
               <p data-ng-bind="project.role"></p>
               
-              <div class="row project-skills">
-                <div class="col-md-6">
+              <!-- <div class="row project-skills">
+                <div class="col-md-12">
                   <h5>Project Details</h5>
-                  <p>blahblah blah blah blah</p>
+                  <p data-ng-bind="project.details"></p>
                 </div>
-                <div class="col-md-6">
-                  <h5>My Thoughts</h5>
-
-                  <p>blahblah blah blah blah</p>
-                  <p>blahblah blah blah blah</p>
-                </div>
-              </div>
+              </div> -->
               <div class="row project-skills">
                 <div class="col-md-2">
                   <h5>Issue Management</h5>
