--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
           <div class="overlay">
             <h1>?</h1>
           </div>
-          <img src="/images/me-2.jpg" class=""/>
+          <img src="images/me-2.jpg" class=""/>
         </div>
       </div>
       <div class="row profile-body" ani-scroll="550">
