--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
   <div class="container">
     <header class="section-header">
       <div class="title">
-        <p class="top"><span>Back-end & Front-end Web Developer</span></p>
+        <p class="bottom"><span>Back-end & Front-end Web Developer</span></p>
         <h2 class="section-title"><span>Gregory Collett</span></h2>
         <!-- <p class="bottom secret">
           <span>Unfortunately, not a designer :D</span>
@@ -42,15 +42,9 @@
       </div>
       <div class="row profile-body" ani-scroll="550">
         <div class="col-md-8 col-md-offset-2">
-          <p>Gregory Collett - born and raised in S.E London, England.</p> 
-          <p>
-            A diligent, hardworking individual ready to take on any challenge, if it includes learning - all the better!
-          </p>
-          <p>Fell in <i class="glyphicon glyphicon-heart"></i> with tech as a child and it has continued to grow. It all started with my family's electronics & a screwdriver, any electronic item I could get my hands on was dissected. 
-          </p>
-          <p>
-          I then progressed to software, all it took to get me hooked was a £3 magazine with a demo disc containing a 30 day trial of Dreamweaver MX and Flash MX (the Macromedia days)... I never looked back!
-          </p>
+          <p>I'm Gregory Collett, a dilligent & self-motivated web developer from S.E. London.</p>
+          <p>I fell in <i class="glyphicon glyphicon-heart"></i> with tech as a child and it has continued to grow. It all started with my family's electronics and a screwdriver, any electronic item I could get my hands on was dissected (Sorry Mum & Dad).</p>
+          <p>I then progressed to software, all it took to get me hooked was a £2.50 magazine with a demo disc containing a 30 day trial of Dreamweaver MX and Flash MX (the Macromedia days)... I never looked back!</p>
         </div>
       </div>
     </div>
@@ -122,26 +116,22 @@
         <table class="table">
           <thead>
             <tr>
-              <th class="col-md-8">COURSE</th>
-              <th class="col-md-4">LEVEL</th>
+              <th class="col-md-8">RESOURCE</th>
+              <th class="col-md-4">COURSE</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>CODEACADEMY</td>
-              <td></td>
+              <td>PYTHON | RUBY</td>
             </tr>
             <tr>
               <td>SAFARI BOOKS</td>
-              <td>A great source for tech books</td>
+              <td>GREAT SOURCE FOR TECH BOOKS</td>
             </tr>
             <tr>
               <td>LYNDA</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>MIKAMAI TRAINING</td>
-              <td>Thanks Todd!</td>
+              <td>.NET | C#</td>
             </tr>
             <tr>
               <td>PROCESSMAKER PARTNER TRAINING</td>
@@ -152,17 +142,15 @@
               <td></td>
             </tr>
             <tr>
-              <td>CARTOON SMART</td>
-              <td></td>
+              <td>CARTOON SMART (2005)</td>
+              <td>DREAMWEAVER | FLASH ANIMATION | FLASH GAMES | AS</td>
             </tr>
             <tr>
-              <td>I also attend a lot of conferences, meetups & hack days</td>
-              <td></td>
-            </tr>
           </tbody>
         </table>
+        <p class="text-center">I also attend a lot of conferences, meetups & hack days</p>
         <h2 class="text-center">FUTURE</h2>
-        <p class="text-center">You have some training for me? Brilliant lets get started!</p>
+        <p class="text-center">I am always interested in gaining new skills. Think there is something I should take a look at?</p>
       </div>
     </div>
   </div>
