--- a/app/views/main.html
+++ b/app/views/main.html
@@ -57,112 +57,125 @@
         <h2 class="section-title"><span>Education</span></h2>
       </div>
     </header>
-  </div>
-  <div class="education">
-    <div class="row" style="padding-top:35px;margin-left:0;margin-right:0;">
-      <div class="col-md-6 col-md-offset-3">
-        <h2 class="text-center">WOOLWICH POLYTECHNIC</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th class="col-md-8">COURSE</th>
-              <th class="col-md-4">LEVEL</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>INFORMATION TECHNOLOGY</td>
-              <td>A</td>
-            </tr>
-            <tr>
-              <td>ENGLISH</td>
-              <td>B</td>
-            </tr>
-            <tr>
-              <td>MATHS</td>
-              <td>BB</td>
-            </tr>
-            <tr>
-              <td>MUSIC</td>
-              <td>BB</td>
-            </tr>
-          </tbody>
-        </table>
-        <h2 class="text-center">ZENOS IT ACADEMY</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th class="col-md-8">COURSE</th>
-              <th class="col-md-4">LEVEL</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>COMPTIA A+</td>
-              <td>PASS</td>
-            </tr>
-            <tr>
-              <td>COMPTIA N+</td>
-              <td>PASS</td>
-            </tr>
-            <tr>
-              <td>MCDST</td>
-              <td>PASS</td>
-            </tr>
-          </tbody>
-        </table>
-        <p class="text-center">In 2008 whilst applying for universities I was offered my ideal job as a juniour developer at a software house that maintained & managed a number of projects/products. I decided to take the offer and go straight into the commercial industry.</p>
-        <h2 class="text-center">UNOFFICIAL TRAINING</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th class="col-md-8">RESOURCE</th>
-              <th class="col-md-4">COURSE</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>CODEACADEMY</td>
-              <td>PYTHON | RUBY</td>
-            </tr>
-            <tr>
-              <td>SAFARI BOOKS</td>
-              <td>GREAT SOURCE FOR TECH BOOKS</td>
-            </tr>
-            <tr>
-              <td>LYNDA</td>
-              <td>.NET | C#</td>
-            </tr>
-            <tr>
-              <td>PROCESSMAKER PARTNER TRAINING</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>SUGARCRM PARTNER TRAINING</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>CARTOON SMART (2005)</td>
-              <td>DREAMWEAVER | FLASH ANIMATION | FLASH GAMES | AS</td>
-            </tr>
-            <tr>
-          </tbody>
-        </table>
-        <p class="text-center">I also attend a lot of conferences, meetups & hack days</p>
-        <h2 class="text-center">FUTURE</h2>
-        <p class="text-center">I am always interested in gaining new skills. Think there is something I should take a look at?</p>
+    <div class="education">
+      <div class="row" style="padding-top:35px;margin-left:0;margin-right:0;">
+        <div class="col-md-6 col-md-offset-3">
+          <h2 class="text-center">WOOLWICH POLYTECHNIC</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-md-8">COURSE</th>
+                <th class="col-md-4">LEVEL</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>INFORMATION TECHNOLOGY</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>ENGLISH</td>
+                <td>B</td>
+              </tr>
+              <tr>
+                <td>MATHS</td>
+                <td>BB</td>
+              </tr>
+              <tr>
+                <td>MUSIC</td>
+                <td>BB</td>
+              </tr>
+            </tbody>
+          </table>
+          <h2 class="text-center">ZENOS IT ACADEMY</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-md-8">COURSE</th>
+                <th class="col-md-4">LEVEL</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>COMPTIA A+</td>
+                <td>PASS</td>
+              </tr>
+              <tr>
+                <td>COMPTIA N+</td>
+                <td>PASS</td>
+              </tr>
+              <tr>
+                <td>MCDST</td>
+                <td>PASS</td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="text-center">In 2008 whilst applying for universities I was offered my ideal job as a juniour developer at a software house that maintained & managed a number of projects/products. I decided to take the offer and go straight into the commercial industry.</p>
+          <h2 class="text-center">UNOFFICIAL TRAINING</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-md-8">RESOURCE</th>
+                <th class="col-md-4">COURSE</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>CODEACADEMY</td>
+                <td>PYTHON | RUBY</td>
+              </tr>
+              <tr>
+                <td>SAFARI BOOKS</td>
+                <td>GREAT SOURCE FOR TECH BOOKS</td>
+              </tr>
+              <tr>
+                <td>LYNDA</td>
+                <td>.NET | C#</td>
+              </tr>
+              <tr>
+                <td>PROCESSMAKER PARTNER TRAINING</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>SUGARCRM PARTNER TRAINING</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>CARTOON SMART (2005)</td>
+                <td>DREAMWEAVER | FLASH ANIMATION | FLASH GAMES | AS</td>
+              </tr>
+              <tr>
+            </tbody>
+          </table>
+          <p class="text-center">I also attend a lot of conferences, meetups & hack days</p>
+          <h2 class="text-center">FUTURE</h2>
+          <p class="text-center">I am always interested in gaining new skills. Think there is something I should take a look at?</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
-<!-- <section class="page page-skills" id="page-skills">
+<section class="page page-skills" id="page-skills">
   <div class="container">
     <header class="section-header">
-      <h2 class="section-title"><span>Skills</span></h2>
-      <div class="spacer"></div>
+      <div class="title">
+        <h2 class="section-title"><span>Skills</span></h2>
+      </div>
     </header>
+    <div class="row skills">
+      <ul class="skills-list">
+        <li data-ng-repeat="skill in skills">
+          <div class="skill">
+            <div class="skill-level" data-ng-if="skill.level" ng-style="{width: skill.level}"></div>
+            <div class="skill-title">
+              <span data-ng-bind="skill.title"></span><span class="pull-right" data-ng-bind="skill.level"></span>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
-</section> -->
+</section>
 <section class="page page-projects" id="page-projects">
   <div class="container">
     <header class="section-header">
