--- a/app/views/main.html
+++ b/app/views/main.html
@@ -173,6 +173,7 @@
           </div>
         </li>
       </ul>
+      <p class="text-center">Im pretty sure I could add a lot more.</p>
     </div>
   </div>
 </section>
