--- a/app/views/main.html
+++ b/app/views/main.html
@@ -42,8 +42,8 @@
       </div>
       <div class="row profile-body" ani-scroll="550">
         <div class="col-md-8 col-md-offset-2">
-          <p>I'm Gregory Collett, a dilligent & self-motivated web developer from S.E. London.</p>
-          <p>I fell in <i class="glyphicon glyphicon-heart"></i> with tech as a child and it has continued to grow. It all started with my family's electronics and a screwdriver, any electronic item I could get my hands on was dissected (Sorry Mum & Dad).</p>
+          <p>I'm Gregory Collett, a diligent & self-motivated web developer from S.E. London.</p>
+          <p>I fell in <i class="glyphicon glyphicon-heart"></i> with technology as a child and it has continued to grow. It all started with my family's electronics and a screwdriver, any electronic item I could get my hands on was dissected (Sorry Mum & Dad).</p>
           <p>I then progressed to software, all it took to get me hooked was a £2.50 magazine with a demo disc containing a 30 day trial of Dreamweaver MX and Flash MX (the Macromedia days)... I never looked back!</p>
         </div>
       </div>
@@ -110,7 +110,7 @@
               </tr>
             </tbody>
           </table>
-          <p class="text-center">In 2008 whilst applying for universities I was offered my ideal job as a juniour developer at a software house that maintained & managed a number of projects/products. I decided to take the offer and go straight into the commercial industry.</p>
+          <p class="text-center">In 2008 whilst applying for universities I was offered my ideal job as a junior developer at a software house that maintained & managed a number of projects/products. I decided to take the offer and go straight into the commercial industry.</p>
           <h2 class="text-center">UNOFFICIAL TRAINING</h2>
           <table class="table">
             <thead>
@@ -162,9 +162,18 @@
         <h2 class="section-title"><span>Skills</span></h2>
       </div>
     </header>
+    <div class="row">
+      <ul class="nav nav-pills">
+        <li data-ng-repeat="type in skillTypes">
+          <a href="javascript:void()">
+            <span data-ng-bind="type.title"></span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="row skills">
       <ul class="skills-list">
-        <li data-ng-repeat="skill in skills">
+        <li data-ng-repeat="skill in skillsList | orderBy:'-width'">
           <div class="skill">
             <div class="skill-level" data-ng-if="skill.level" ng-style="{width: skill.level}"></div>
             <div class="skill-title">
@@ -173,7 +182,6 @@
           </div>
         </li>
       </ul>
-      <p class="text-center">Im pretty sure I could add a lot more.</p>
     </div>
   </div>
 </section>
